<resources>
    <string name="app_name" translatable="false">WunderLINQ GoPro Remote</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="cameralist_title">GoPros</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">No Name</string>
    <string name="location_alert_title">Location Request</string>
    <string name="location_alert_body">Location Permissions are required for Bluetooth scanning</string>
    <string name="negative_location_alert_title">Location Request Denied</string>
    <string name="negative_location_alert_body">Location Permissions are required for Bluetooth scanning</string>

    <string name="location_services_alert_title">Location Services Required</string>
    <string name="location_services_alert_body">Your device appears to have location services turned off. Please re-enable them to use this app.</string>

    <string name="location_request_alert_title">Location Permission Required</string>
    <string name="location_request_alert_body">The WunderLINQ GoPro Remote needs access to your location to scan for nearby GoPro Cameras.</string>
    <string name="bt_request_alert_title">Bluetooth Permission Required</string>
    <string name="bt_request_alert_body">The WunderLINQ GoPro Remote needs the Bluetooth scanning permission to scan for nearby GoPro Cameras. </string>

    <string name="btscan_alert_title">Bluetooth Scan Request</string>
    <string name="btscan_alert_body">Location Permissions are required for Bluetooth scanning</string>
    <string name="negative_btscan_alert_title">Location Request Denied</string>
    <string name="negative_btscan_alert_body">Location Permissions are required for Bluetooth scanning</string>

    <string name="btconnect_alert_title">Bluetooth Connect Request</string>
    <string name="btconnect_alert_body">Bluetooth Connect Permissions are required to connect to your GoPro</string>
    <string name="negative_btconnect_alert_title">Bluetooth Connect Request Denied</string>
    <string name="negative_btconnect_alert_body">Location Permissions are required for Bluetooth scanning</string>

    <string name="task_title_photo">Take Photo</string>
    <string name="task_title_start_record">Start Video Recording</string>
    <string name="task_title_stop_record">Stop Video Recording</string>
    <string name="task_title_start_timelapse">Start Timelapse Recording</string>
    <string name="task_title_stop_timelapse">Stop Timelapse Recording</string>
    <string name="pref_highlightColor_title">Highlight Color</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="ui_title">User Interface</string>

    <string name="debug_settings_title">Debug Settings</string>
    <string name="pref_debuglogging_name">Enable Debug Logging</string>
    <string name="pref_debuglogging_summary">Only enable if needed by Support, may impact performance if left running.  Please disable when finished.</string>
    <string name="pref_preview_name">Enable Camera Preview</string>
    <string name="pref_preview_summary">Allows the ability to view camera preview.</string>
    <string name="close_label">Close</string>

    <!-- AboutActivity -->
    <string name="appsettings_label">App Settings</string>
    <string name="info_label">About</string>
    <string name="about_title">About</string>
    <string name="app_name_link" translatable="false">
        <a href="http://www.wunderlinq.com">WunderLINQ™</a>
    </string>
    <string name="company_name_link" translatable="false">
        <a href="https://www.blackboxembedded.com">Black Box Embedded, LLC</a>
    </string>
    <string name="version_label">Version:</string>
    <string name="btn_documentation_title">Documentation</string>
    <string name="btn_sendlogs_title">Send Logs</string>
    <string name="sendlogs_subject" translatable="false">WunderLINQ GoPro Android Debug Logs</string>
    <string name="sendlogs_body">Please describe your problem below:\n</string>
    <string name="sendlogs_intent_title">Send Logs…</string>
    <string name="sendlogs_email" translatable="false">support@blackboxembedded.com</string>

</resources>
