<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:id="@+id/clAbout"
    android:background="?attr/backgroundColor">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wunderlinq_logo"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name_link"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersion" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btDocumentation"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/btn_documentation_title"
        app:backgroundTint="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btSendLogs"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/btn_sendlogs_title"
        app:backgroundTint="?attr/buttonColor"
        android:textColor="?attr/buttonTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDocumentation"/>

</androidx.constraintlayout.widget.ConstraintLayout>

